<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Icon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".create_account">

    <!-- Titre -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="138dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description"
        android:scaleType="centerCrop"
        android:src="@drawable/syndic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/create_account"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/already_registered" />


    <!-- Lien "log in here" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onLoginClicked"
        android:text="@string/log_in_here"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <!-- Champ de saisie pour le nom -->
    <TextView
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_nom" />

    <!-- Champ de saisie pour l'e-mail -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/e_mail"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_email"
        android:inputType="textEmailAddress" />

    <!-- Champ de saisie pour le mot de passe -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mot_de_passe"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_mot_de_passe"
        android:inputType="textPassword" />

    <!-- Champ de saisie pour le numéro de téléphone -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/numero_de_telephone"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_numero_de_telephone"
        android:inputType="phone" />

    <!-- Champ de saisie pour la date de naissance -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date_de_naissance"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_date_de_naissance"
        android:inputType="date" />

    <!-- Bouton de validation  -->
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/valider"
        android:textColor="@color/white"
        android:onClick="onSubmitButtonClick"/>

</LinearLayout>
