<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Reclamations">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/topArea"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/shape">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:onClick="retour"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    android:contentDescription="@string/back_btn_description" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/imageView3"
                    android:paddingEnd="30dp"
                    android:text="@string/reclamations"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/cardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_menu"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_une_r_clamation"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_gravity="center_horizontal"
        android:onClick="ajouter"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_menu"
        app:menu="@menu/bottom_menu" />

</LinearLayout>
